== Release notes

Every release contains many small fixes.

=== 1.20.0.0
* Refactor Routing
* Table Pages: no need to pass columns in constructor

=== 1.19.1.0
* JsonFrontend: better meta information and title
* SwingFrontend: Lookup button fix

=== 1.19.0.0
* Redesign Frontend.createList

=== 1.18.0.0
* Repository: delete by criteria. Change signature of 'count'
* Form: support for PasswordFormElement

=== 1.17.0.0
* Form: read only wrapper
* Backend: support for PostgreSql

=== 1.16.0.0
* Extract use of JavaFx in ext project
* Material design: dropdown triangle
* more consistent date parsing
* Redesign form interface, add GROW_FIRST (column)

=== 1.15.0.0
* historized sql repository: complete support historized references (and lists)
* Remove RenderType. Redesign Rendering concept
* Redesign Lookup UI concept
* validation refactoring
* JsonImage : image upload in JsonFrontend
* Rename NanoWebServer to WebServer

=== 1.14.0.0
* Allow wizards to have a last step without active next button
* HtmlFrontend: add close button to dialogs

=== 1.13.0.0
* Sorting for completely loaded tables
* SimpleTablePageWithDetail more helper methods
* HtmlFrontend: more dynamic layout
* Materialized getters (@Materialized)

=== 1.12.0.0
* Codes: clear cache when write a code
* Upgrade to Lanterna 3

=== 1.11.0.0
* Application: Declare Resources with Bundles, not with Strings
* Refactor repository configuration
* For the moment the historized repository is a an ext - project

=== 1.10.0.0
* Split Application/Model/Api
* More work/doc on routing

=== 1.9.0.0
* HtmlFrontend: FlexBox Layout
* HtmlFrontend: Title in Browser
* Frontends: Simple application icon
* Pages can provide route for bookmarks
* Vaadin Frontend: complete migration to Vaadin 8

=== 1.8.0.0
* Model: self references of classes are only allowed through View or Lists
* SwingFrontend: fix special LookAndFeel

=== 1.7.0.0
* Frontend: support for html5 inputs on small devices
* Frontend: better Date/Time/DateTime support